# G1FinalProject

./: License  README.md  frames.gv  map.pgm  point_cloud_sample_pcd.py  point_cloud_sample_ply.py
PCD Python Scripts/: point_cloud_sample_pcd.py  point_cloud_sample_ply.py  point_cloud_sample_ply_pcd_convert.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/basic_robot/share/basic_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pcl_conversions/include/pcl_conversions/: pcl_conversions.h
install/pcl_conversions/share/pcl_conversions/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pcl_ros/include/pcl_ros/: pcl_nodelet.hpp  point_cloud.hpp  publisher.hpp  transforms.hpp
install/pcl_ros/share/pcl_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/perception_pcl/share/perception_pcl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
log/: latest_build  latest_list
src/basic_robot/: CMakeLists.txt  package.xml  view_basic_robot.rviz
src/basic_robot/Models/: Materials.xacro  basic_robot.urdf.xacro  basic_robot_core.xacro  depth_camera.xacro  gazebo_control.xacro
src/basic_robot/World/: my_world.world
src/basic_robot/basic_robot/: read_points.py
src/basic_robot/config/: view_final_robot.rviz
src/basic_robot/launch/: launch_sim.py  rsp.basic_robot_launch.py
(+261 files in other folders)
